toggle light-dark mode button fixed

--- a/style.css
+++ b/style.css
@@ -6,14 +6,31 @@
 .card {
     font-family: sans-serif;
     border-radius: 10px;
-    padding: 1%;
     border: 5px solid;
+    padding: 1%;
     margin: 3%;
+}
+
+.header-buttons {
+    display: flex;
+}
+
+.button {
+    font-family: sans-serif;
+    border-radius: 10px;
+    border: 5px solid;
+    margin: 1% 0 0 3%;
+    padding: 1%;
 }
 
 .dark {
     background-color: black;
     color: white;
+}
+
+.light {
+    background-color: white;
+    color: black;
 }
 
 .header {
